<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/GeneralPadding"
    tools:context=".GelirGiderEkle" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/GeneralPadding"
            android:gravity="center" >

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rdGelir"
                    style="@style/labelTarih"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onClickRadioGelGit"
                    android:text="@string/gelir" />

                <RadioButton
                    android:id="@+id/rdGider"
                    style="@style/labelTarih"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/GeneralPadding"
                    android:onClick="onClickRadioGelGit"
                    android:text="@string/gider" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:id="@+id/rowKaynakGelir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/GeneralPadding" >

            <TextView
                android:id="@+id/TextView01"
                style="@style/labelGelGit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="@dimen/GeneralPadding"
                android:text="@string/kategori"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/cmbGelir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:id="@+id/rowKaynakGider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <TextView
                android:id="@+id/TextView03"
                style="@style/labelGelGit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="@dimen/GeneralPadding"
                android:text="@string/kategori"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/cmbGider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:id="@+id/rowTutar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tbAciklama"
                style="@style/labelGelGit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="@dimen/GeneralPadding"
                android:text="@string/tutar"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtTutar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberSigned" >

            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/rowAciklama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <TextView
                android:id="@+id/TextView02"
                style="@style/labelGelGit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="@dimen/GeneralPadding"
                android:text="@string/aciklama"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtAciklama"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margini" >

        <Button
            android:id="@+id/btnGeri"
            style="@style/btnGeri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margini"
            android:onClick="Geri" />

        <Button
            android:id="@+id/btnSil"
            style="@style/btnSil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="KayitSil"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnKaydet"
            style="@style/btnKaydet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margini"
            android:onClick="KayitKaydet" />

    </LinearLayout>

</LinearLayout>